# Ilab_3-rd_projects

./: README.md
2Q_Cache/: CMakeLists.txt  README.md
2Q_Cache/Headers/: 2Q_Cache_header.hpp
2Q_Cache/Ideal_cache/: ideal_cache.cpp
2Q_Cache/Source/: 2Q_Cache_source.cpp
2Q_Cache/Tests/: 2Q_Cache_test_generator.cpp  a.out  test  test_1.txt  test_2.txt  test_4.txt  test_6.txt  test_7.txt  test_8.txt
2Q_Cache_reserv/: 2Q_Cache_header.hpp  2Q_Cache_source.cpp  main  output.txt
2Q_Cache_reserv/Tests/: test_3.txt  test_5.txt
Triangles/: CMakeLists.txt
